feat: 重大优化 - 分类清理、Gemini修复和标题格式统一
## 1. 数据库分类清理
- 删除crypto分类的源和文章
- 将social分类重命名为socialmedia (6个源, 59篇文章)
- 更新所有代码中的IndustryCategory枚举映射
- 修复frontend/src/components/SourceManager.tsx中的分类显示

## 2. Gemini响应截断问题修复
### 问题诊断
- Gemini在生成Markdown表格时填充大量空格(99.4%空格)
- 导致输出达到197万字符，触发max_tokens限制(finish_reason=2)

### 解决方案(三层防御)
1. **通用格式约束(base.yaml)**: 添加格式规范章节
   - 避免复杂表格，使用列表/分段替代
   - 控制输出长度，避免冗余
   - 所有行业自动继承

2. **后处理清理(gemini_adapter.py)**: 添加_clean_table_spaces()
   - 识别表格行，压缩连续4+空格为3个
   - 测试显示可节省99.7%空间

3. **Prompt优化**: 简化输出要求，避免重复

## 3. 报告标题格式统一
### 格式规范
- 统一为: "日期-行业-报告标题"
- 例如: "2026-02-04-财经金融-市场分析报告"

### 实现架构
```
base.yaml (系统约束)
    ↓ 继承
BaseLLMAdapter (通用方法 + 13个行业中文映射)
    ↓ 继承
所有Adapter (自动应用标题格式)
```

- 在adapter.py添加INDUSTRY_NAME_MAP和_get_report_title_format()
- 更新所有4个adapter (gemini, openai, deepseek, ollama)

## 4. 文档
- CLEANUP_VERIFICATION_REPORT.md: 分类清理验证报告
- GEMINI_FIX_SUMMARY.md: Gemini修复详细说明
- TITLE_FORMAT_UPDATE.md: 标题格式统一文档

## 修改文件统计
- 新增: 4个文件
- 修改: 25个文件
- 删除: 2个文件 (crypto.yaml, social.yaml)
- 代码变更: +3191, -1185

--- a/backend/config/sources.yaml
+++ b/backend/config/sources.yaml
@@ -74,7 +74,7 @@ official_rss:
     url: "https://www.zhihu.com/rss"
     type: "rss"
     priority: "official_rss"
-    industry: "social"
+    industry: "socialmedia"
     enabled: true
 
   # BBC官方RSS
@@ -583,97 +583,6 @@ finance:
       quality: "政策动态"
 
 
-# ==================== 加密货币源 ====================
-crypto:
-  # 金色财经
-  - name: "金色财经-政策"
-    url: "http://localhost:1200/jinse/zhengce"
-    type: "rss"
-    priority: "rsshub_stable"
-    industry: "crypto"
-    enabled: true
-    metadata:
-      description: "加密货币政策动态"
-      layer: 1
-      quality: "核心动态"
-      asset_class: "crypto"
-
-  - name: "金色财经-实时"
-    url: "http://localhost:1200/jinse/lives"
-    type: "rss"
-    priority: "rsshub_stable"
-    industry: "crypto"
-    enabled: true
-    metadata:
-      description: "加密市场实时快讯"
-      update_freq: "实时"
-      layer: 1
-      quality: "核心动态"
-      asset_class: "crypto"
-
-  # 律动 BlockBeats
-  - name: "律动快讯"
-    url: "http://localhost:1200/theblockbeats/newsflash"
-    type: "rss"
-    priority: "rsshub_stable"
-    industry: "crypto"
-    enabled: true
-    metadata:
-      description: "加密货币快讯"
-      layer: 1
-      quality: "核心动态"
-      asset_class: "crypto"
-
-  - name: "律动文章"
-    url: "http://localhost:1200/theblockbeats/article"
-    type: "rss"
-    priority: "rsshub_stable"
-    industry: "crypto"
-    enabled: true
-    metadata:
-      description: "加密货币深度报道"
-      layer: 2
-      quality: "深度洞察"
-      asset_class: "crypto"
-
-  # TokenInsight
-  - name: "TokenInsight研究报告"
-    url: "http://localhost:1200/tokeninsight/report/zh"
-    type: "rss"
-    priority: "rsshub_stable"
-    industry: "crypto"
-    enabled: true
-    metadata:
-      description: "链上数据洞察/研究报告"
-      layer: 2
-      quality: "深度洞察"
-      asset_class: "crypto"
-
-  # Followin
-  - name: "Followin新闻"
-    url: "http://localhost:1200/followin/news/en"
-    type: "rss"
-    priority: "rsshub_stable"
-    industry: "crypto"
-    enabled: true
-    metadata:
-      description: "Web3英文新闻聚合"
-      layer: 1
-      asset_class: "crypto"
-
-  # Paradigm
-  - name: "Paradigm研究"
-    url: "http://localhost:1200/paradigm/writing"
-    type: "rss"
-    priority: "rsshub_stable"
-    industry: "crypto"
-    enabled: true
-    metadata:
-      description: "Paradigm投资研究"
-      layer: 2
-      asset_class: "crypto"
-
-
 # ==================== 通用信息源（RSSHub）====================
 general:
   # ===== 社交媒体 Social Media =====
@@ -681,7 +590,7 @@ general:
     url: "http://localhost:1200/weibo/search/hot"
     type: "rss"
     priority: "rsshub_stable"
-    industry: "social"
+    industry: "socialmedia"
     enabled: true
     metadata:
       description: "微博实时热搜话题"
@@ -690,7 +599,7 @@ general:
     url: "http://localhost:1200/zhihu/hotlist"
     type: "rss"
     priority: "rsshub_stable"
-    industry: "social"
+    industry: "socialmedia"
     enabled: true
     metadata:
       description: "知乎热门问题"
@@ -699,7 +608,7 @@ general:
     url: "http://localhost:1200/zhihu/daily"
     type: "rss"
     priority: "rsshub_stable"
-    industry: "social"
+    industry: "socialmedia"
     enabled: true
     metadata:
       description: "知乎精选文章"
@@ -708,7 +617,7 @@ general:
     url: "http://localhost:1200/jike/topic/553870e8e4b0cd50b29f3262"
     type: "rss"
     priority: "rsshub_stable"
-    industry: "social"
+    industry: "socialmedia"
     enabled: true
     metadata:
       description: "即刻互联网人主题"
@@ -727,7 +636,7 @@ general:
     url: "http://localhost:1200/douban/group/hot"
     type: "rss"
     priority: "rsshub_stable"
-    industry: "social"
+    industry: "socialmedia"
     enabled: true
     metadata:
       description: "豆瓣小组热门话题"
